[metadata]
name = replcraft-jarci
version = 1.5.1.1
author = techpixel
author_email = yralqfwus@mozmail.com
description = Implementation of Replcraft in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/techpixel/replcraft-jarci
project_urls =
    Bug Tracker = https://github.com/techpixel/replcraft-jarci/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
